<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/evento_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        app:layout_constraintBottom_toTopOf="@id/descricao_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descricao_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detalhes_do_evento"
        app:layout_constraintBottom_toTopOf="@id/botao_salvar"
        app:layout_constraintEnd_toEndOf="@id/evento_text_input"
        app:layout_constraintStart_toStartOf="@id/evento_text_input"
        app:layout_constraintTop_toBottomOf="@id/evento_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="32dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botao_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:icon="@drawable/ic_salvar"
        app:layout_constraintBottom_toBottomOf="@id/botao_data"
        app:layout_constraintEnd_toEndOf="@id/descricao_text_input"
        app:layout_constraintStart_toEndOf="@id/botao_local"
        app:layout_constraintTop_toTopOf="@id/botao_local" />

    <Button
        android:id="@+id/botao_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        app:icon="@drawable/ic_local"
        app:layout_constraintBottom_toBottomOf="@id/botao_data"
        app:layout_constraintEnd_toStartOf="@id/botao_salvar"
        app:layout_constraintStart_toEndOf="@id/botao_data"
        app:layout_constraintTop_toTopOf="@id/botao_data" />

    <Button
        android:id="@+id/botao_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/data"
        app:icon="@drawable/ic_calendario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botao_local"
        app:layout_constraintStart_toStartOf="@id/descricao_text_input"
        app:layout_constraintTop_toBottomOf="@id/descricao_text_input" />


</androidx.constraintlayout.widget.ConstraintLayout>